--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,27 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+#contact-form {
+  border: 5px solid black;
+  padding: 50px;
+  margin: 20px;
+}
+
+#grade-form {
+  border: 5px solid black;
+  padding: 30px;
+  margin: 20px;
+  justify-content: center;
+}
+
+#Submission-form {
+  border: 5px solid black;
+  padding: 30px;
+  margin: 20px;
+  justify-content: center;
+}
+
+.bodycss{
+background-color: whitesmoke;
+}
